--- a/src/hsWidget/index.html
+++ b/src/hsWidget/index.html
@@ -23,16 +23,17 @@
 <span id=8 class="line">&nbsp;&nbsp;&nbsp;8</span>export&nbsp;{&nbsp;Menu&nbsp;}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from&nbsp;'./Menu';&nbsp;<br>
 <span id=9 class="line">&nbsp;&nbsp;&nbsp;9</span>export&nbsp;{&nbsp;SelectorDesc&nbsp;}&nbsp;from&nbsp;'./Selector';&nbsp;<br>
 <span id=10 class="line">&nbsp;&nbsp;10</span>export&nbsp;{&nbsp;Button&nbsp;}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from&nbsp;'./Button';&nbsp;<br>
-<span id=11 class="line">&nbsp;&nbsp;11</span>export&nbsp;{&nbsp;RadioButton&nbsp;}&nbsp;&nbsp;from&nbsp;'./RadioButton';&nbsp;<br>
-<span id=12 class="line">&nbsp;&nbsp;12</span>export&nbsp;{&nbsp;ToggleButton&nbsp;}&nbsp;from&nbsp;'./ToggleButton';&nbsp;<br>
-<span id=13 class="line">&nbsp;&nbsp;13</span>export&nbsp;{&nbsp;ToolbarButton,<br>
-<span id=14 class="line">&nbsp;&nbsp;14</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ButtonSymbols<br>
-<span id=15 class="line">&nbsp;&nbsp;15</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from&nbsp;'./ToolbarButton';<br>
-<span id=16 class="line">&nbsp;&nbsp;16</span>export&nbsp;{&nbsp;AddButton,&nbsp;<br>
-<span id=17 class="line">&nbsp;&nbsp;17</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;RemoveButton&nbsp;}&nbsp;from&nbsp;'./AddRemove';&nbsp;<br>
-<span id=18 class="line">&nbsp;&nbsp;18</span>export&nbsp;{&nbsp;Collapsible&nbsp;}&nbsp;&nbsp;from&nbsp;'./Collapsible';&nbsp;<br>
-<span id=19 class="line">&nbsp;&nbsp;19</span>export&nbsp;{&nbsp;Modal&nbsp;}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from&nbsp;'./Modal';&nbsp;<br>
-<span id=20 class="line">&nbsp;&nbsp;20</span>export&nbsp;{&nbsp;TypeAhead&nbsp;}&nbsp;&nbsp;&nbsp;&nbsp;from&nbsp;'./TypeAhead';&nbsp;<br>
-<span id=21 class="line">&nbsp;&nbsp;21</span><br></code></div>
+<span id=11 class="line">&nbsp;&nbsp;11</span>export&nbsp;{&nbsp;Label&nbsp;}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from&nbsp;'./Label';&nbsp;<br>
+<span id=12 class="line">&nbsp;&nbsp;12</span>export&nbsp;{&nbsp;Slider&nbsp;}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from&nbsp;'./Slider';&nbsp;<br>
+<span id=13 class="line">&nbsp;&nbsp;13</span>export&nbsp;{&nbsp;RadioButton&nbsp;}&nbsp;&nbsp;from&nbsp;'./RadioButton';&nbsp;<br>
+<span id=14 class="line">&nbsp;&nbsp;14</span>export&nbsp;{&nbsp;ToggleButton&nbsp;}&nbsp;from&nbsp;'./ToggleButton';&nbsp;<br>
+<span id=15 class="line">&nbsp;&nbsp;15</span>export&nbsp;{&nbsp;ToolbarButton}&nbsp;from&nbsp;'./ToolbarButton';&nbsp;<br>
+<span id=16 class="line">&nbsp;&nbsp;16</span>export&nbsp;{&nbsp;ButtonSymbols}&nbsp;from&nbsp;'./ToolbarButton';&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+<span id=17 class="line">&nbsp;&nbsp;17</span>export&nbsp;{&nbsp;AddButton&nbsp;}&nbsp;&nbsp;&nbsp;&nbsp;from&nbsp;'./AddRemove';&nbsp;<br>
+<span id=18 class="line">&nbsp;&nbsp;18</span>export&nbsp;{&nbsp;RemoveButton&nbsp;}&nbsp;from&nbsp;'./AddRemove';&nbsp;<br>
+<span id=19 class="line">&nbsp;&nbsp;19</span>export&nbsp;{&nbsp;Collapsible&nbsp;}&nbsp;&nbsp;from&nbsp;'./Collapsible';&nbsp;<br>
+<span id=20 class="line">&nbsp;&nbsp;20</span>export&nbsp;{&nbsp;Modal&nbsp;}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from&nbsp;'./Modal';&nbsp;<br>
+<span id=21 class="line">&nbsp;&nbsp;21</span>export&nbsp;{&nbsp;TypeAhead&nbsp;}&nbsp;&nbsp;&nbsp;&nbsp;from&nbsp;'./TypeAhead';&nbsp;<br>
+<span id=22 class="line">&nbsp;&nbsp;22</span><br></code></div>
                 </body>
             
